<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_btn_to_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.65dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.01"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black_main_page"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@id/back_btn_to_main_page"
        app:layout_constraintTop_toBottomOf="@id/back_btn_to_main_page" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_shape"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColor="@color/black_main_page"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_shape"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColor="@color/black_main_page"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_logIn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bacckground_shape_solid_black"
        android:fontFamily="@font/roboto_bold"
        android:letterSpacing="0.04"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_password_logIn" />

</androidx.constraintlayout.widget.ConstraintLayout>